# YT-Shorts-Auto-Factory

./: .env.example  .gitignore  COPILOT_MASTER_PLAN.md  COPILOT_MASTER_PLAN_PART2.md  COPILOT_MASTER_PLAN_PART3.md  IMPLEMENTATION_STARTER.md  README.md  pyproject.toml  yt-shorts-factory-spec-part2.md  yt-shorts-factory-spec-part3.md  yt-shorts-factory-spec.md
src/: __init__.py  main.py
src/content_generation/: __init__.py  models.py  niche_selector.py  script_generator.py
src/content_generation/templates/: __init__.py  historical_mystery.jinja2  obscure_fact.jinja2  productivity_hack.jinja2
src/core/: __init__.py  config.py  constants.py  exceptions.py  pipeline.py
src/media_creation/: __init__.py
src/media_creation/image_generation/: __init__.py
src/media_creation/tts/: __init__.py
src/metadata/: __init__.py
src/monitoring/: __init__.py  logger.py
src/trend_analysis/: __init__.py  analyzer.py  base.py  cache.py  models.py
src/trend_analysis/sources/: __init__.py  reddit_scraper.py  youtube_trends.py
src/upload/: __init__.py
src/utils/: __init__.py  decorators.py  file_manager.py  validators.py
src/video_compilation/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: test_config.py  test_pipeline.py  test_script_generator.py  test_trend_analyzer.py  test_trend_models.py  test_trend_scrapers.py  test_utils.py
